# diplo-ia

./: .gitignore  README.md  main.py  pyproject.toml
clase-04/: Clase 04 - Ejercitación.ipynb  Clase 04 - Práctica - Cargar_pune_1965_to_2002.ipynb  Clase 04 - Práctica_visualización.ipynb
